Adiciona integração com Supabase, implementa tela de criação de receitas com campos dinâmicos para ingredientes e instruções, além de configurar permissões de internet no Android e registrar novos plugins nas plataformas Linux, macOS e Windows.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,9 @@ dependencies:
   # Imagens e ícones
   image_picker: ^1.1.2
   cached_network_image: ^3.4.1
+  
+  # Supabase
+  supabase_flutter: ^2.0.0
 
 dev_dependencies:
   flutter_test:
