Implementa funcionalidades de upload de imagem e seleção de categorias na criação de receitas, além de melhorias na autenticação e mensagens de feedback ao usuário. Atualiza permissões no AndroidManifest e ajusta a tela de registro para informar sobre a verificação de email.

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <!-- Required to fetch data from the internet. -->
     <uses-permission android:name="android.permission.INTERNET" />
+    <!-- Camera and storage permissions for image upload -->
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" android:maxSdkVersion="28" />
     <application
         android:label="receitas_app"
         android:name="${applicationName}"
